Project senteur {
  database_type: 'MySQL'
  Note: 'Senteur database schema'
}

Enum user_role {
  admin
  user
}

Enum product_gender {
  male
  female
  unisex
}

Enum note_type {
  general
  top
  heart
  base
}

Enum order_status {
  pending
  processing
  shipped
  delivered
  cancelled
}

Enum payment_status {
  pending
  paid
  failed
}

Table brands {
  id int [pk, increment]
  name varchar(100) [unique, not null]
}

Table fragrance_types {
  id int [pk, increment]
  name varchar(50) [unique, not null]
}

Table users {
  id int [pk, increment]
  public_id char(10) [unique, not null]
  role user_role [not null, default: 'user']

  username varchar(50) [unique, not null]
  email varchar(255) [unique, not null]
  phone varchar(20)
  password_hash text [not null]

  email_verified_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`, note: 'MySQL: ON UPDATE CURRENT_TIMESTAMP']
}

Table products {
  id int [pk, increment]

  brand_id int [not null]
  fragrance_type_id int

  family_name varchar(150)

  name varchar(150) [not null]
  concentration_label varchar(100)
  slug varchar(180) [unique, not null]
  description text
  gender product_gender [not null]

  deleted_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`, note: 'MySQL: ON UPDATE CURRENT_TIMESTAMP']

  indexes {
    gender [name: 'idx_products_gender']
    (brand_id, gender) [name: 'idx_products_brand_gender']
    fragrance_type_id [name: 'idx_products_fragrance_type']
    family_name [name: 'idx_products_family_name']
    (name, description) [name: 'idx_products_name_description', note: 'MySQL FULLTEXT INDEX']
  }
}

Table product_variants {
  id int [pk, increment]

  product_id int [not null]

  size_ml int [not null]
  price decimal(10,2) [not null, check: `price >= 0`]
  stock int [not null, check: `stock >= 0`]

  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`, note: 'MySQL: ON UPDATE CURRENT_TIMESTAMP']

  indexes {
    (product_id, size_ml) [unique]
    price [name: 'idx_variants_price']
    stock [name: 'idx_variants_stock']
    (product_id, price) [name: 'idx_variants_product_price']
  }
}

Table product_images {
  id int [pk, increment]

  product_id int [not null]

  image_url varchar(255) [not null]
  position int [not null, default: 0]

  indexes {
    (product_id, position) [unique]
    (product_id, position) [name: 'idx_images_product_position']
  }
}

Table product_variant_images {
  id int [pk, increment]

  product_variant_id int [not null]
  image_url varchar(255) [not null]
  position int [not null, default: 0]

  indexes {
    (product_variant_id, position) [unique]
    (product_variant_id, position) [name: 'idx_variant_images_variant_position']
  }
}

Table categories {
  id int [pk, increment]
  name varchar(100) [unique, not null, check: `name <> ''`]
}

Table notes {
  id int [pk, increment]
  name varchar(100) [unique, not null, check: `name <> ''`]
  slug varchar(100) [unique, not null, check: `slug <> ''`]
  image_url varchar(255) [not null]

  indexes {
    name [name: 'idx_notes_name']
  }
}

Table product_categories {
  product_id int [not null]
  category_id int [not null]

  indexes {
    (product_id, category_id) [pk]
    product_id [name: 'idx_product_categories_product']
    category_id [name: 'idx_product_categories_category']
  }
}

Table product_notes {
  product_id int [not null]
  note_id int [not null]
  note_type note_type [not null]

  indexes {
    (product_id, note_id, note_type) [pk]
    product_id [name: 'idx_product_notes_product']
    note_id [name: 'idx_product_notes_note']
  }
}

Table user_addresses {
  id int [pk, increment]

  user_id int [not null]

  full_name varchar(150) [not null]
  address_line varchar(255) [not null]
  city varchar(100) [not null]
  postal_code varchar(20) [not null]
  country varchar(100) [not null]

  is_default boolean [not null, default: false]

  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table orders {
  id int [pk, increment]

  public_id char(10) [unique, not null]

  user_id int [not null]
  shipping_address_id int [not null]

  status order_status [not null, default: 'pending']

  subtotal_amount decimal(10,2) [not null, check: `subtotal_amount >= 0`]
  shipping_cost decimal(10,2) [not null, check: `shipping_cost >= 0`]
  total_amount decimal(10,2) [not null, check: `total_amount >= 0`]

  paid_at timestamp
  shipped_at timestamp
  delivered_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`, note: 'MySQL: ON UPDATE CURRENT_TIMESTAMP']

  indexes {
    user_id [name: 'idx_orders_user_id']
    status [name: 'idx_orders_status']
    shipping_address_id [name: 'idx_orders_address_id']
  }
}

Table order_items {
  id int [pk, increment]

  order_id int [not null]
  product_variant_id int [not null]

  product_name_snapshot varchar(150) [not null]
  brand_name_snapshot varchar(100) [not null]
  concentration_label_snapshot varchar(100)
  image_url_snapshot varchar(255)
  size_ml_snapshot int [not null]

  quantity int [not null, check: `quantity > 0`]
  price_at_purchase decimal(10,2) [not null, check: `price_at_purchase >= 0`]

  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (order_id, product_variant_id) [unique]
    order_id [name: 'idx_order_items_order_id']
  }
}

Table payments {
  id int [pk, increment]

  order_id int [unique, not null]

  provider varchar(50) [not null]
  provider_payload json
  status payment_status [not null, default: 'pending']

  amount decimal(10,2) [not null, check: `amount >= 0`]
  currency varchar(10) [not null, default: 'EUR']

  stripe_session_id varchar(255) [unique]
  transaction_id varchar(255) [unique]

  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  paid_at timestamp

  indexes {
    status [name: 'idx_payments_status']
  }
}

Table reviews {
  id int [pk, increment]

  user_id int [not null]
  product_id int [not null]

  rating int [not null, check: `rating BETWEEN 1 AND 5`]
  title varchar(150)
  comment text

  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, product_id) [unique]
    product_id [name: 'idx_reviews_product_id']
  }
}

Table carts {
  id int [pk, increment]

  session_id varchar(255) [unique]
  user_id int [unique]

  expires_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`, note: 'MySQL: ON UPDATE CURRENT_TIMESTAMP']
}

Table cart_items {
  cart_id int [not null]
  product_variant_id int [not null]

  quantity int [not null, check: `quantity > 0`]

  indexes {
    (cart_id, product_variant_id) [pk]
    product_variant_id [name: 'idx_cart_items_variant_id']
  }
}

// Relationships

Ref: products.brand_id > brands.id [delete: restrict]
Ref: products.fragrance_type_id > fragrance_types.id

Ref: product_variants.product_id > products.id [delete: cascade]

Ref: product_images.product_id > products.id [delete: cascade]

Ref: product_variant_images.product_variant_id > product_variants.id [delete: cascade]

Ref: product_categories.product_id > products.id [delete: cascade]
Ref: product_categories.category_id > categories.id

Ref: product_notes.product_id > products.id [delete: cascade]
Ref: product_notes.note_id > notes.id

Ref: user_addresses.user_id > users.id [delete: cascade]

Ref: orders.user_id > users.id [delete: restrict]
Ref: orders.shipping_address_id > user_addresses.id

Ref: order_items.order_id > orders.id [delete: cascade]
Ref: order_items.product_variant_id > product_variants.id

Ref: payments.order_id > orders.id [delete: cascade]

Ref: reviews.user_id > users.id
Ref: reviews.product_id > products.id [delete: cascade]

Ref: carts.user_id > users.id [delete: set null]

Ref: cart_items.cart_id > carts.id [delete: cascade]
Ref: cart_items.product_variant_id > product_variants.id [delete: cascade]